--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 @import url('./vite-promo.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -39,4 +39,11 @@
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+}
+
+.value {
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: 0.04em;
+    text-align: left;
 }
