--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,6 +41,46 @@
   color: #747bff;
 }
 
+body {
+  max-width: 365px;
+}
+
+/* 1-timer */
+
+#datetime-picker {
+  width: 240px;
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 4px;
+  background-color: #F5F5F5;
+  color: #2E2F42;
+}
+
+.timer-button {
+  width: 75px;
+  padding: 6px 16px 6px 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #4E75FF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+}
+
+.timer {
+  margin-top: 32px;
+  display: flex;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .value {
     font-size: 40px;
     line-height: 48px;
